--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APK Decompiler</title>
 
@@ -12,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="min-h-full bg-gray-100 font-sans text-gray-900 antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
