--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="dark h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="min-h-full bg-gray-100 font-sans text-gray-900 antialiased">
+  <body class="min-h-full bg-gray-100 font-sans text-gray-900 antialiased dark:bg-black">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
